tests/ui/discord-frontend/entity_macro/expected_literal_7.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_7.rs:39:18
   |
LL |     overrides = [true],
   |                  ^^^^

error: aborting due to 1 previous error

